angular calendar: created empty calendar (month view component)

--- a/angular-calendar/calendar/src/app/app.component.html
+++ b/angular-calendar/calendar/src/app/app.component.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="calendar_header__nav_date">
-        <!--{{ date.toLocaleString(locale, { month: "long", year: "numeric" }) }}-->
+        {{ currentDate.toLocaleString(locale, { month: "long", year: "numeric" }) }}
       </div>
 
       <div class="calendar_header__nav_btns">
@@ -22,4 +22,5 @@
   </div>
 </header>
 
-<month-view></month-view>
+<month-view
+        [cD]="currentDate"></month-view>
