calendar - added active class

--- a/angular-calendar/calendar/src/app/month/calendarMonthView.component.css
+++ b/angular-calendar/calendar/src/app/month/calendarMonthView.component.css
@@ -32,18 +32,6 @@
     border: 1px solid grey;
 }
 
-/*////////////////////*/
-.calendar_header {
-    text-align: center;
-}
-
-.calendar_header__nav {
-    display: flex;
-    justify-content: space-between;
-    margin: 40px 0;
-}
-
-.calendar_header__nav_date {
-    font-family: "Kaushan", sans-serif;
-    font-size: 30px;
+.active {
+  background-color: rgba(46,167,9,0.6);
 }
