--- a/angular-calendar/calendar/src/app/app.component.css
+++ b/angular-calendar/calendar/src/app/app.component.css
@@ -1,14 +1,21 @@
 .calendar_header {
-    text-align: center;
+  text-align: center;
+  width: 100%;
 }
 
 .calendar_header__nav {
-    display: flex;
-    justify-content: space-between;
-    margin: 40px 0;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.calendar_header__nav_btns {
+  font-size: 0;
 }
 
 .calendar_header__nav_date {
-    font-family: "Kaushan", sans-serif;
-    font-size: 30px;
+  font-family: "Kaushan", sans-serif;
+  font-size: 30px;
+  line-height: 1;
 }
