angular calendar: added styles to month view and buttons

--- a/angular-calendar/calendar/src/app/app.component.html
+++ b/angular-calendar/calendar/src/app/app.component.html
@@ -4,9 +4,9 @@
       <nav class="calendar_header__nav">
 
         <div class="calendar_header__nav_btns">
-          <button class="btn btn-primary" (click)="previousMonthButton()">Previous</button>
-          <button class="btn btn-primary" (click)="todayButton()">Today</button>
-          <button class="btn btn-primary" (click)="nextMonthButton()">Next</button>
+          <button class="my_btn" (click)="previousMonthButton()">Prev</button>
+          <button class="my_btn" (click)="todayButton()">Today</button>
+          <button class="my_btn" (click)="nextMonthButton()">Next</button>
         </div>
 
         <div class="calendar_header__nav_date">
@@ -14,9 +14,9 @@
         </div>
 
         <div class="calendar_header__nav_btns">
-          <button class="btn btn-primary">Month</button>
-          <button class="btn btn-primary">Week</button>
-          <button class="btn btn-primary">Day</button>
+          <button class="my_btn">Month</button>
+          <button class="my_btn">Week</button>
+          <button class="my_btn">Day</button>
         </div>
 
       </nav>
