--- a/angular-calendar/calendar/src/app/month/calendarMonthView.component.html
+++ b/angular-calendar/calendar/src/app/month/calendarMonthView.component.html
@@ -11,26 +11,31 @@
 
             <div class="nonthCellDateContainer monthCell">
                 <div class="dayCell grey"
-                     *ngFor="let day of prevMonthDateArray">
-                            <span class="dayNumber"
-                                  [class.weekend]="day.getDay() === 6 || day.getDay() === 0">
-                                {{ day.getDate() }}
-                            </span>
+                     *ngFor="let day of prevMonthDateArray"
+                     [class.active]="day.toLocaleDateString() === today.toLocaleDateString()">
+                    <div class="overlay"></div>
+                    <span class="dayNumber"
+                          [class.weekend]="day.getDay() === 6 || day.getDay() === 0">
+                        {{ day.getDate() }}
+                    </span>
                 </div>
                 <div class="dayCell"
                      *ngFor="let day of currMonthDateArray"
                      [class.active]="day.toLocaleDateString() === today.toLocaleDateString()">
-                            <span class="dayNumber"
-                                  [class.weekend]="day.getDay() === 6 || day.getDay() === 0">
-                                {{ day.getDate() }}
-                            </span>
+                    <div class="overlay"></div>
+                    <span class="dayNumber"
+                          [class.weekend]="day.getDay() === 6 || day.getDay() === 0">
+                        {{ day.getDate() }}
+                    </span>
                 </div>
                 <div class="dayCell grey"
-                     *ngFor="let day of nextMonthDateArray">
-                            <span class="dayNumber"
-                                  [class.weekend]="day.getDay() === 6 || day.getDay() === 0">
-                                {{ day.getDate() }}
-                            </span>
+                     *ngFor="let day of nextMonthDateArray"
+                     [class.active]="day.toLocaleDateString() === today.toLocaleDateString()">
+                    <div class="overlay"></div>
+                    <span class="dayNumber"
+                          [class.weekend]="day.getDay() === 6 || day.getDay() === 0">
+                        {{ day.getDate() }}
+                    </span>
                 </div>
             </div>
         </div>
