angular calendar: started work under form component

--- a/angular-calendar/calendar/src/app/app.component.html
+++ b/angular-calendar/calendar/src/app/app.component.html
@@ -14,9 +14,9 @@
         </div>
 
         <div class="calendar_header__nav_btns">
-          <button class="my_btn">Month</button>
-          <button class="my_btn">Week</button>
-          <button class="my_btn">Day</button>
+            <button class="btn my_btn">Month</button>
+            <button class="btn my_btn">Week</button>
+            <button class="btn my_btn">Day</button>
         </div>
 
       </nav>
@@ -27,3 +27,5 @@
 <month-view
         [cD]="currentDate">
 </month-view>
+
+<note-editor></note-editor>
