--- a/angular-calendar/calendar/src/app/note-editor/note-editor.component.html
+++ b/angular-calendar/calendar/src/app/note-editor/note-editor.component.html
@@ -1,48 +1,53 @@
 <section class="note_editor_s container">
-    <form #form="ngForm" (ngSubmit)="onSubmit()">
+    <form #form="ngForm" *ngIf="active">
 
-        <div class="form-group">
+        {{ form.valid }}
+
+        <div class="form-group" [ngClass]="{'has-error': title.invalid && title.touched}">
             <input type="text" class="form-control"
                    [(ngModel)]="newNote.title"
                    name="title" placeholder="Title" required
                    #title>
 
-            <span class="help-block">Title is required</span>
+            <span class="help-block" *ngIf="title.invalid && title.touched">Title is required</span>
         </div>
 
-        <div class="form-group">
-            <select type="text" class="form-control"
-                    required>
-                <option *ngFor="let n of noteTypes" value="{{ n.name }}" [(ngModel)]="newNote.type" name="type"
-                        #type="ngModel">
-                    {{ n.name }}
+        <div class="form-group" [ngClass]="{'has-error': type.invalid && type.touched}">
+            <select type="text" class="form-control" [(ngModel)]="newNote.type"
+                    name="type" #type="ngModel" required>
+                <option *ngFor="let nt of noteTypes" value="{{ nt.name }}">
+                    {{ nt.name }}
                 </option>
             </select>
 
-            <span class="help-block">Title is required</span>
+            <span class="help-block" *ngIf="type.invalid && type.touched">Type is required</span>
         </div>
 
-        <div class="form-group">
-            <input [(colorPicker)]="color" [style.background]="color" [value]="color"/>
+        <div class="form-group" [ngClass]="{'has-error': color.invalid && color.touched}">
+            <input [(colorPicker)]="newNote.color" [style.background]="newNote.color" [ngModel]="newNote.color"
+                   [value]="newNote.color"
+                   name="color" #color="ngModel" required/>
+
+            <span class="help-block" *ngIf="color.invalid && color.touched">Color is required</span>
         </div>
 
-        <div class="form-group">
-            <input [ngModel]="momentValue | date: 'shortDate'" [(dateTimePicker)]="momentValue" readonly name="date"
-                   #date="ngModel"/>
+        <div class="form-group" [ngClass]="{'has-error': date.invalid && date.touched}">
+            <input [ngModel]="newNote.date" [(dateTimePicker)]="newNote.date" readonly name="date"
+                   #date="ngModel" required placeholder="Date"/>
 
-            <span class="help-block">Date is required</span>
+            <span class="help-block" *ngIf="date.invalid && date.touched">Date is required</span>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" [ngClass]="{'has-error': text.invalid && text.touched}">
             <input type="text" class="form-control"
                    [(ngModel)]="newNote.text"
-                   name="text" placeholder="ToDo..." #text>
+                   name="text" placeholder="ToDo..." #text required>
 
-            <span class="help-block">Type is required</span>
+            <span class="help-block" *ngIf="text.invalid && text.touched">Type is required</span>
         </div>
 
-        <button type="submit" class="btn btn-lg btn-block btn-primary"
-                [disabled]="form.invalid">
+        <button type="button" class="btn btn-lg btn-block btn-primary"
+                [disabled]="form.invalid" (click)="onSubmit()">
             Create User
         </button>
 
