angular calendar: modal window is connected

--- a/angular-calendar/calendar/src/app/app.component.html
+++ b/angular-calendar/calendar/src/app/app.component.html
@@ -14,9 +14,9 @@
         </div>
 
         <div class="calendar_header__nav_btns">
-            <button class="btn my_btn">Month</button>
-            <button class="btn my_btn">Week</button>
-            <button class="btn my_btn">Day</button>
+            <button class="my_btn">Month</button>
+            <button class="my_btn">Week</button>
+            <button class="my_btn">Day</button>
         </div>
 
       </nav>
@@ -29,4 +29,3 @@
         [notes]="notes">
 </month-view>
 
-<note-editor (noteCreated)="onNoteCreated($event)"></note-editor>
