--- a/angular-calendar/calendar/src/app/note/note.component.sass
+++ b/angular-calendar/calendar/src/app/note/note.component.sass
@@ -33,3 +33,13 @@
 .weekend
   color: red
 
+.my_popup
+  display: none
+  position: fixed
+  width: 60vw
+  top: 20vh
+  left: 20vw
+  z-index: 2
+
+.visible
+  display: block
