--- a/angular-calendar/calendar/src/app/note-editor/note-editor.component.html
+++ b/angular-calendar/calendar/src/app/note-editor/note-editor.component.html
@@ -1,55 +1,63 @@
-<section class="note_editor_s container">
-    <form #form="ngForm" *ngIf="active">
-
-        {{ form.valid }}
-
-        <div class="form-group" [ngClass]="{'has-error': title.invalid && title.touched}">
-            <input type="text" class="form-control"
-                   [(ngModel)]="newNote.title"
-                   name="title" placeholder="Title" required
-                   #title>
-
-            <span class="help-block" *ngIf="title.invalid && title.touched">Title is required</span>
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="close" (click)="close()">&times;</button>
+            <h4 class="modal-title">{{titleMessage || 'Hello'}}</h4>
         </div>
 
-        <div class="form-group" [ngClass]="{'has-error': type.invalid && type.touched}">
-            <select type="text" class="form-control" [(ngModel)]="newNote.type"
-                    name="type" #type="ngModel" required>
-                <option *ngFor="let nt of noteTypes" value="{{ nt.name }}">
-                    {{ nt.name }}
-                </option>
-            </select>
+        <form #form="ngForm" *ngIf="active">
 
-            <span class="help-block" *ngIf="type.invalid && type.touched">Type is required</span>
-        </div>
+            <div class="modal-body">
+                <div class="form-group" [ngClass]="{'has-error': title.invalid && title.touched}">
+                    <input type="text" class="form-control"
+                           [(ngModel)]="newNote.title"
+                           name="title" placeholder="Title" required
+                           #title>
 
-        <div class="form-group" [ngClass]="{'has-error': color.invalid && color.touched}">
-            <input [(colorPicker)]="newNote.color" [style.background]="newNote.color" [ngModel]="newNote.color"
-                   [value]="newNote.color"
-                   name="color" #color="ngModel" required/>
+                    <span class="help-block" *ngIf="title.invalid && title.touched">Title is required</span>
+                </div>
 
-            <span class="help-block" *ngIf="color.invalid && color.touched">Color is required</span>
-        </div>
+                <div class="form-group" [ngClass]="{'has-error': type.invalid && type.touched}">
+                    <select type="text" class="form-control" [(ngModel)]="newNote.type"
+                            name="type" #type="ngModel" required>
+                        <option *ngFor="let nt of noteTypes" value="{{ nt.name }}">
+                            {{ nt.name }}
+                        </option>
+                    </select>
 
-        <div class="form-group" [ngClass]="{'has-error': date.invalid && date.touched}">
-            <input [ngModel]="newNote.date" [(dateTimePicker)]="newNote.date" readonly name="date"
-                   #date="ngModel" required placeholder="Date"/>
+                    <span class="help-block" *ngIf="type.invalid && type.touched">Type is required</span>
+                </div>
 
-            <span class="help-block" *ngIf="date.invalid && date.touched">Date is required</span>
-        </div>
+                <div class="form-group" [ngClass]="{'has-error': color.invalid && color.touched}">
+                    <input [(colorPicker)]="newNote.color" [style.background]="newNote.color" [ngModel]="newNote.color"
+                           [value]="newNote.color"
+                           name="color" #color="ngModel" required readonly/>
 
-        <div class="form-group" [ngClass]="{'has-error': text.invalid && text.touched}">
-            <input type="text" class="form-control"
-                   [(ngModel)]="newNote.text"
-                   name="text" placeholder="ToDo..." #text required>
+                    <span class="help-block" *ngIf="color.invalid && color.touched">Color is required</span>
+                </div>
 
-            <span class="help-block" *ngIf="text.invalid && text.touched">Type is required</span>
-        </div>
+                <div class="form-group" [ngClass]="{'has-error': date.invalid && date.touched}">
+                    <input [ngModel]="newNote.date | date: 'short'" [(dateTimePicker)]="newNote.date" readonly
+                           name="date"
+                           #date="ngModel" required placeholder="Date"/>
 
-        <button type="button" class="btn btn-lg btn-block btn-primary"
-                [disabled]="form.invalid" (click)="onSubmit()">
-            Create User
-        </button>
+                    <span class="help-block" *ngIf="date.invalid && date.touched">Date is required</span>
+                </div>
 
-    </form>
-</section>
+                <div class="form-group" [ngClass]="{'has-error': text.invalid && text.touched}">
+                    <input type="text" class="form-control"
+                           [(ngModel)]="newNote.text"
+                           name="text" placeholder="ToDo..." #text required>
+
+                    <span class="help-block" *ngIf="text.invalid && text.touched">Type is required</span>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" (click)="apply()">OK</button>
+                <button type="button" class="btn btn-default" (click)="close()">Cancel</button>
+            </div>
+
+        </form>
+
+    </div>
+</div>
