--- a/angular-calendar/calendar/src/app/note-editor/note-editor.component.sass
+++ b/angular-calendar/calendar/src/app/note-editor/note-editor.component.sass
@@ -4,4 +4,39 @@
 .note_editor_s
   background-color: $lightGray
   border-radius: 3px
-  padding-bottom: 50px
+  border: 1px solid $mainBlue
+  padding: 30px
+  position: relative
+
+.hide_popup
+  display: none
+
+input
+  padding-left: 10px
+
+.exit
+  position: absolute
+  top: 0
+  right: 0
+  width: 20px
+  height: 20px
+  &:before
+    content: ''
+    display: block
+    position: absolute
+    top: 11px
+    right: 2px
+    width: 20px
+    height: 1px
+    background-color: $mainBlue
+    transform: rotate(45deg)
+  &:after
+    content: ''
+    display: block
+    position: absolute
+    top: 10px
+    right: 2px
+    width: 20px
+    height: 1px
+    background-color: $mainBlue
+    transform: rotate(-45deg)
