angular calendar: modal window is connected

--- a/angular-calendar/calendar/src/app/app.component.html
+++ b/angular-calendar/calendar/src/app/app.component.html
@@ -4,9 +4,9 @@
       <nav class="calendar_header__nav">
 
         <div class="calendar_header__nav_btns">
-          <button class="my_btn" (click)="previousMonthButton()">Prev</button>
-          <button class="my_btn" (click)="todayButton()">Today</button>
-          <button class="my_btn" (click)="nextMonthButton()">Next</button>
+          <button class="my_btn--header" (click)="previousMonthButton()">Prev</button>
+          <button class="my_btn--header" (click)="todayButton()">Today</button>
+          <button class="my_btn--header" (click)="nextMonthButton()">Next</button>
         </div>
 
         <div class="calendar_header__nav_date">
@@ -14,9 +14,9 @@
         </div>
 
         <div class="calendar_header__nav_btns">
-            <button class="my_btn">Month</button>
-            <button class="my_btn">Week</button>
-            <button class="my_btn">Day</button>
+          <button class="my_btn--header">Month</button>
+          <button class="my_btn--header">Week</button>
+          <button class="my_btn--header">Day</button>
         </div>
 
       </nav>
