--- a/angular-calendar/calendar/src/app/app.component.sass
+++ b/angular-calendar/calendar/src/app/app.component.sass
@@ -1,6 +1,7 @@
 @import "../assets/reset"
 @import "../assets/vars"
 @import "../assets/main"
+@import "../assets/mixins"
 
 .calendar_header
   text-align: center
@@ -23,25 +24,10 @@
     border-bottom-right-radius: 5px
     border-left: 1px solid #fff
 
-.my_btn
-  font-family: $mainFont
-  font-style: normal
-  font-size: 20px
-  color: #fff
+.my_btn--header
+  @extend .my_btn
   width: 80px
   height: 40px
-  line-height: 40px
-  background-color: $mainBlue
-  border: 1px solid $mainBlue
-  display: inline-block
-  text-align: center
-  transition: all 0.3s
-  &:active
-    box-shadow: inset 0 0 20px 0 $mainBlue
-  &:hover
-    background-color: $lightAccent
-    border: 1px solid $lightGray
-    color: $mainBlue
 
 .calendar_header__nav_date
   font-family: $mainFont
