--- a/angular-calendar/calendar/src/app/note-editor/note-editor.component.sass
+++ b/angular-calendar/calendar/src/app/note-editor/note-editor.component.sass
@@ -1,42 +1,11 @@
 @import "../../assets/reset"
 @import "../../assets/vars"
-
-.note_editor_s
-  background-color: $lightGray
-  border-radius: 3px
-  border: 1px solid $mainBlue
-  padding: 30px
-  position: relative
-
-.hide_popup
-  display: none
+@import "../../assets/mixins"
 
 input
   padding-left: 10px
 
-.exit
-  position: absolute
-  top: 0
-  right: 0
-  width: 20px
-  height: 20px
-  &:before
-    content: ''
-    display: block
-    position: absolute
-    top: 11px
-    right: 2px
-    width: 20px
-    height: 1px
-    background-color: $mainBlue
-    transform: rotate(45deg)
-  &:after
-    content: ''
-    display: block
-    position: absolute
-    top: 10px
-    right: 2px
-    width: 20px
-    height: 1px
-    background-color: $mainBlue
-    transform: rotate(-45deg)
+.my_btn--popup
+  @extend .my_btn
+  width: 100%
+
