--- a/angular-calendar/calendar/src/app/note/note.component.sass
+++ b/angular-calendar/calendar/src/app/note/note.component.sass
@@ -33,13 +33,19 @@
 .weekend
   color: red
 
-.my_popup
-  display: none
-  position: fixed
-  width: 60vw
-  top: 20vh
-  left: 20vw
-  z-index: 2
+.notes
+  position: absolute
+  display: flex
+  align-items: center
+  flex-wrap: wrap
+  padding: 5px
+  bottom: 0
+  left: 0
 
-.visible
-  display: block
+.note
+  width: 10px
+  height: 10px
+  border-radius: 50%
+  margin-right: 5px
+  margin-top: 5px
+
