--- a/angular-calendar/calendar/src/app/note/note.component.sass
+++ b/angular-calendar/calendar/src/app/note/note.component.sass
@@ -1,12 +1,11 @@
 @import "../../assets/reset"
 @import "../../assets/vars"
 
-.dayCell
+.day
   width: 100%
   height: 100%
   margin: 0
   position: relative
-  overflow: hidden
   &:hover .overlay
     display: block
 
@@ -48,4 +47,18 @@
   border-radius: 50%
   margin-right: 5px
   margin-top: 5px
+  position: relative
+  overflow: hidden
+  &:hover
+    overflow: visible
+
+.note_info
+  position: absolute
+  bottom: 100%
+  left: 100%
+  padding: 0 5px
+  background-color: $mainBlue
+  color: #fff
+  z-index: 1
+
 
