--- a/angular-calendar/calendar/src/app/note-editor/note-editor.component.html
+++ b/angular-calendar/calendar/src/app/note-editor/note-editor.component.html
@@ -2,7 +2,7 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" (click)="close()">&times;</button>
-            <h4 class="modal-title">{{titleMessage || 'Hello'}}</h4>
+            <h4 class="modal-title">{{titleMessage + ' the task' || 'Hello'}}</h4>
         </div>
 
         <form #form="ngForm" *ngIf="active">
@@ -36,11 +36,11 @@
 
                 <div class="form-group" [ngClass]="{'has-error': color.invalid && color.touched}">
                     <input [(colorPicker)]="newNote.color"
-                           [style.background]="defaultColor"
+                           [style.background]="newNote.color || defaultColor"
                            [ngModel]="newNote.color"
                            [cpPresetColors]="['#fff', '#000', '#2889e9', '#e920e9', '#fff500', 'rgb(236,64,64)']"
                            [value]="newNote.color"
-                           [cpFallbackColor]="defaultColor"
+                           [cpFallbackColor]="newNote.color || defaultColor"
                            name="color" #color="ngModel"
                            required
                            readonly/>
@@ -49,8 +49,8 @@
                 </div>
 
                 <div class="form-group" [ngClass]="{'has-error': date.invalid && date.touched}">
-                    <input [ngModel]="newNote.date | date: 'short'"
-                           [(dateTimePicker)]="newNote.date"
+                    <input [ngModel]="newNote.currentDate | date: 'short'"
+                           [(dateTimePicker)]="newNote.currentDate"
                            name="date"
                            #date="ngModel"
                            required
@@ -71,7 +71,12 @@
             <div class="modal-footer">
                 <button type="button" class="my_btn--popup"
                         (click)="apply(form)">
-                    Create new note
+                    {{ titleMessage + ' note' }}
+                </button>
+
+                <button type="button" class="my_btn--popup" *ngIf="deleteNote === true "
+                        (click)="apply(form)">
+                    {{ titleMessage + ' note' }}
                 </button>
             </div>
 
