--- a/angular-calendar/calendar/src/app/note/note.component.html
+++ b/angular-calendar/calendar/src/app/note/note.component.html
@@ -10,7 +10,7 @@
     <div class="notes">
         <div *ngFor="let n of note">
             <div class="note"
-                 *ngIf="n.date.toLocaleDateString() === day.toLocaleDateString()"
+                 *ngIf="n.currentDate.toLocaleDateString() === day.toLocaleDateString()"
                  [ngStyle]="{ 'background-color': n.color }"
                  (click)="editNote(n, $event)">
                 <div class="note_info">
