angular calendar: delete notes feature added

--- a/angular-calendar/calendar/src/app/note-editor/note-editor.component.sass
+++ b/angular-calendar/calendar/src/app/note-editor/note-editor.component.sass
@@ -8,4 +8,10 @@ input
 .my_btn--popup
   @extend .my_btn
   width: 100%
+  border-radius: 4px
+
+.my_btn--delete
+  @extend .my_btn--popup
+  background-color: $redText
+  border: 1px solid $redText
 
