--- a/angular-calendar/calendar/src/app/note-editor/note-editor.component.html
+++ b/angular-calendar/calendar/src/app/note-editor/note-editor.component.html
@@ -73,10 +73,9 @@
                         (click)="apply(form)">
                     {{ titleMessage + ' note' }}
                 </button>
-
-                <button type="button" class="my_btn--popup" *ngIf="deleteNote === true "
-                        (click)="apply(form)">
-                    {{ titleMessage + ' note' }}
+                <button type="button" class="my_btn--popup my_btn--delete" *ngIf="deleteNote === true "
+                        (click)="remove()">
+                    {{ 'Delete note' }}
                 </button>
             </div>
 
