angular calendar: styles changed added

--- a/angular-calendar/calendar/src/app/app.component.sass
+++ b/angular-calendar/calendar/src/app/app.component.sass
@@ -28,6 +28,9 @@
   @extend .my_btn
   width: 80px
   height: 40px
+  @include phone
+    border-radius: 5px
+    border: 1px solid #fff
 
 .calendar_header__nav_date
   font-family: $mainFont
