--- a/angular-calendar/calendar/src/app/month/calendarMonthView.component.sass
+++ b/angular-calendar/calendar/src/app/month/calendarMonthView.component.sass
@@ -1,5 +1,6 @@
 @import "../../assets/reset"
 @import "../../assets/vars"
+@import "../../assets/mixins"
 
 .daysOfWeek
   height: 5vh
@@ -18,10 +19,17 @@
 .dayHead
   float: left
   width: 14.285%
+  height: 20px
   color: #000
+  padding: 3px
   font-family: $mainFont
   font-weight: bold
   text-align: center
+  word-break: break-all
+  //max-width: 3ch
+  overflow: hidden
+//white-space: nowrap
+//text-overflow: ellipsis
 
 .active
   background-color: $accent
