angular calendar: get notes from database via api

--- a/symfony-angular/app/Resources/views/base.html.twig
+++ b/symfony-angular/app/Resources/views/base.html.twig
@@ -10,7 +10,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>{% block title %}Angular calendar{% endblock %}</title>
 
     {% block stylesheets %}
         {% if app.environment != 'dev' %}
@@ -20,7 +20,7 @@
         {% endif %}
     {% endblock %}
 
-    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
+    <link rel="icon" type="image/x-icon" href="{{ asset('src/favicon.ico') }}"/>
 </head>
 <body>
 {% block body %}{% endblock %}
