--- a/symfony-angular/web/src/app/month/calendarMonthView.component.html
+++ b/symfony-angular/web/src/app/month/calendarMonthView.component.html
@@ -9,14 +9,14 @@
 
         <div class="nonthCellDateContainer monthCell">
             <note *ngFor="let day of prevMonthDateArray"
-                  [day]="day" class="dayCell grey"
-                  [notes]="notes"></note>
+                  [day]="day" class="dayCell grey">
+            </note>
             <note *ngFor="let day of currMonthDateArray"
-                  [day]="day" class="dayCell"
-                  [notes]="notes"></note>
+                  [day]="day" class="dayCell">
+            </note>
             <note *ngFor="let day of nextMonthDateArray"
-                  [day]="day" class="dayCell grey"
-                  [notes]="notes"></note>
+                  [day]="day" class="dayCell grey">
+            </note>
         </div>
 
     </div>
