--- a/symfony-angular/web/src/app/note-editor/note-editor.component.html
+++ b/symfony-angular/web/src/app/note-editor/note-editor.component.html
@@ -2,14 +2,14 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" (click)="close()">&times;</button>
-            <h4 class="modal-title">{{titleMessage + ' the task' || 'Hello'}}</h4>
+            <h4 class="modal-title">{{id ? 'Edit' : 'Create'}} {{'the note'}}</h4>
         </div>
 
         <form #form="ngForm" *ngIf="active">
             <div class="modal-body">
                 <div class="form-group" [ngClass]="{'has-error': title.invalid && title.touched}">
                     <input type="text" class="form-control"
-                           [(ngModel)]="newNote.noteTitle"
+                           [(ngModel)]="newNote.note_title"
                            name="title"
                            placeholder="Title"
                            required
@@ -49,8 +49,8 @@
                 </div>
 
                 <div class="form-group" [ngClass]="{'has-error': date.invalid && date.touched}">
-                    <input [ngModel]="newNote.currentDate | date: 'short'"
-                           [(dateTimePicker)]="newNote.currentDate"
+                    <input [ngModel]="newNote.date | date: 'short'"
+                           [(dateTimePicker)]="newNote.date"
                            name="date"
                            #date="ngModel"
                            required
@@ -71,9 +71,9 @@
             <div class="modal-footer">
                 <button type="button" class="my_btn--popup"
                         (click)="apply(form)">
-                    {{ titleMessage + ' note' }}
+                    {{id ? 'Edit' : 'Create'}} {{'the note'}}
                 </button>
-                <button type="button" class="my_btn--popup my_btn--delete" *ngIf="deleteNote === true "
+                <button type="button" class="my_btn--popup my_btn--delete" *ngIf="id"
                         (click)="remove()">
                     {{ 'Delete note' }}
                 </button>
