--- a/symfony-angular/web/src/app/note-editor/note-editor.component.html
+++ b/symfony-angular/web/src/app/note-editor/note-editor.component.html
@@ -9,7 +9,7 @@
             <div class="modal-body">
                 <div class="form-group" [ngClass]="{'has-error': title.invalid && title.touched}">
                     <input type="text" class="form-control"
-                           [(ngModel)]="newNote.note_title"
+                           [(ngModel)]="newNote.noteTitle"
                            name="title"
                            placeholder="Title"
                            required
